[gd_scene load_steps=6 format=3 uid="uid://jth5km4qofs4"]

[ext_resource type="Texture2D" uid="uid://cl8w306xxc8i6" path="res://Assets/main-menu-background.jpg" id="1_8bh12"]
[ext_resource type="Script" path="res://Scenes/Misc.gd" id="1_kx0xj"]
[ext_resource type="Texture2D" uid="uid://bl2je0cgn52fh" path="res://Assets/audio-muted.png" id="3_q7r2t"]
[ext_resource type="Texture2D" uid="uid://fjdqkxbqo4mp" path="res://Assets/audio.png" id="4_1rlk6"]
[ext_resource type="AudioStream" uid="uid://xq51s74o5iw8" path="res://Assets/Flowing Rocks.ogg" id="5_8fgpb"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_kx0xj")

[node name="Main-menu-background" type="Sprite2D" parent="."]
position = Vector2(576.5, 326.5)
scale = Vector2(0.600521, 0.60463)
texture = ExtResource("1_8bh12")
metadata/_edit_lock_ = true

[node name="btnStart" type="Button" parent="."]
offset_left = 464.0
offset_top = 252.0
offset_right = 714.0
offset_bottom = 327.0
focus_neighbor_bottom = NodePath("../btnLevelSelect")
focus_next = NodePath("../btnLevelSelect")
theme_override_font_sizes/font_size = 26
text = "Start"

[node name="btnLevelSelect" type="Button" parent="."]
offset_left = 464.0
offset_top = 350.0
offset_right = 714.0
offset_bottom = 425.0
focus_neighbor_top = NodePath("../btnStart")
focus_previous = NodePath("../btnStart")
theme_override_font_sizes/font_size = 26
text = "Level Selection"

[node name="audio_volume" type="VSlider" parent="."]
offset_left = 1094.0
offset_top = 451.0
offset_right = 1141.0
offset_bottom = 644.0
max_value = 1.0
step = 0.001
value = 0.5
metadata/unmuted_value = 0

[node name="btnAudio" type="TextureButton" parent="."]
offset_left = 1094.0
offset_top = 396.0
offset_right = 1142.0
offset_bottom = 444.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_q7r2t")
texture_pressed = ExtResource("4_1rlk6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8fgpb")
autoplay = true

[node name="Label" type="Label" parent="."]
offset_left = 26.0
offset_top = 425.0
offset_right = 398.0
offset_bottom = 635.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Credits:
Jaxah

Assets:
Kenney: https://www.kenney.nl"

[connection signal="pressed" from="btnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="btnLevelSelect" to="." method="_on_btn_level_select_pressed"]
[connection signal="value_changed" from="audio_volume" to="." method="_on_audio_volume_value_changed"]
[connection signal="toggled" from="btnAudio" to="." method="_on_btn_audio_toggled"]
